--- a/proyecto_final/frontend/pages/vehicle.html
+++ b/proyecto_final/frontend/pages/vehicle.html
@@ -29,9 +29,8 @@
         <!-- Tarjeta de Descripción del Vehículo -->
         <section class="w-full max-w-4xl bg-gradient-to-r from-rose-400 to-purple-700 rounded-lg shadow-lg flex flex-col md:flex-row overflow-hidden">
             <!-- Imagen del Vehículo -->
-            <!-- Imagen del Vehículo -->
-            <div class="w-full md:w-1/3">
-                <img id="vehicle-image" src="../assets/images/placeholder_car.png" alt="Vehículo" class="h-full w-full object-cover p-5">
+            <div class="w-full h-full md:w-2/3 p-5">
+                <img id="vehicle-image" src="../assets/images/placeholder_car.png" alt="Vehículo" class="border-2 border-purple-950 w-full h-full object-cover ">
             </div>
 
             <!-- Información del Vehículo -->
