Se hicieron correcciones en el flujo de la experiencia de usuario. También se trabajó el navbar y footer en archivos separados dado que son altamente reutilizados. Se cambió el formato en el que se muestran las fechas de reserva

--- a/proyecto_final/frontend/pages/catalog.html
+++ b/proyecto_final/frontend/pages/catalog.html
@@ -10,21 +10,7 @@
 <body class="bg-black text-white flex flex-col">
 
     <!-- NavBar -->
-    <div class="bg-gradient-to-r from-rose-400 to-purple-700 pb-1">
-        <nav class="bg-black">
-            <div class="mx-auto px-4 flex justify-between items-center h-16">
-                <a href="index.html">
-                    <img src="../assets/images/home.svg" alt="home icon" class="max-h-10">
-                </a>
-                <div class="flex space-x-6">
-                    <a href="index.html" class="text-white hover:text-pink-500">Inicio</a>
-                    <a href="catalog.html" class="text-white hover:text-pink-500">Catálogo</a>
-                    <a href="login.html" class="text-white hover:text-pink-500">Iniciar Sesión</a>
-                    <a href="signup.html" class="text-white bg-gradient-to-l from-purple-700 to-rose-400 px-4 py-2 rounded hover:scale-105 transition-colors duration-300">Regístrate</a>
-                </div>
-            </div>
-        </nav>
-    </div>
+    <div id="navbar-placeholder"></div>
 
     <!-- Barra de Filtros -->
     <div class="bg-gray-800 py-2 relative">
@@ -105,73 +91,7 @@
 
 </body>
 
-    <!-- Footer -->
-    <footer class="bg-black text-white py-12">
-        <div class="max-w-7xl mx-auto px-6 lg:px-8">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                
-                <!-- Logo e Información Breve -->
-                <div>
-                    <img src="../assets/images/logo.png" alt="Logo Super Autos" class="h-10 mb-4">
-                    <p class="text-gray-400">
-                        Super Autos Medellín ofrece un servicio de alquiler de vehículos de alta calidad, 
-                        adaptado a todas tus necesidades de viaje dentro y fuera de la ciudad.
-                    </p>
-                    <p class="mt-4 text-gray-400">&copy; 2024 Super Autos Medellín. Todos los derechos reservados.</p>
-                </div>
-
-                <!-- Enlaces Rápidos -->
-                <div>
-                    <h3 class="text-lg font-semibold text-white">Enlaces Rápidos</h3>
-                    <ul class="mt-4 space-y-2">
-                        <li><a href="index.html" class="text-gray-400 hover:text-pink-500">Inicio</a></li>
-                        <li><a href="catalog.html" class="text-gray-400 hover:text-pink-500">Catálogo</a></li>
-                        <li><a href="about.html" class="text-gray-400 hover:text-pink-500">Sobre Nosotros</a></li>
-                        <li><a href="faq.html" class="text-gray-400 hover:text-pink-500">Preguntas Frecuentes</a></li>
-                        <li><a href="contact.html" class="text-gray-400 hover:text-pink-500">Contacto</a></li>
-                    </ul>
-                </div>
-
-                <!-- Información de Contacto -->
-                <div>
-                    <h3 class="text-lg font-semibold text-white">Contáctanos</h3>
-                    <ul class="mt-4 space-y-2 text-gray-400">
-                        <li>Dirección: Calle 123, Carrera 45 - 67, El Poblado, Medellín, Colombia</li>
-                        <li>Teléfono: +57 987 654 3210</li>
-                        <li>Email: <a href="mailto:contacto@superautosmed.co" class="hover:text-pink-500">contacto@superautosmed.co</a></li>
-                        <li>Horarios: Lun - Vie: 8:00 AM - 6:00 PM</li>
-                    </ul>
-                    <div class="flex space-x-4 mt-6">
-                        <a href="#" class="text-gray-400 hover:text-pink-500"><img src="../assets/images/fb.svg" alt="Facebook" class="h-6 w-6"></a>
-                        <a href="#" class="text-gray-400 hover:text-pink-500"><img src="../assets/images/ig.svg" alt="Instagram" class="h-6 w-6"></a>
-                        <a href="#" class="text-gray-400 hover:text-pink-500"><img src="../assets/images/wpp.svg" alt="whatsapp" class="h-6 w-6"></a>
-                        <a href="#" class="text-gray-400 hover:text-pink-500"><img src="../assets/images/linkedin.svg" alt="LinkedIn" class="h-6 w-6"></a>
-                    </div>
-                </div>
-
-                <!-- Suscripción al Newsletter -->
-                <div>
-                    <h3 class="text-lg font-semibold text-white">Suscríbete a nuestro Newsletter</h3>
-                    <p class="mt-4 text-gray-400">Recibe las últimas novedades y ofertas exclusivas en tu correo.</p>
-                    <form class="mt-4">
-                        <input type="email" placeholder="Ingresa tu correo" class="w-full px-3 py-2 rounded bg-neutral-800 text-gray-200 placeholder-neutral-500 focus:outline-none focus:ring-2 focus:ring-pink-500">
-                        <button type="submit" class="mt-3 w-full bg-gradient-to-l from-purple-700 to-rose-400 hover:scale-105 text-white py-2 rounded font-semibold">Suscribirse</button>
-                    </form>
-                </div>
-            </div>
-
-            <!-- Links Legales y Otros -->
-            <div class="mt-12 border-t border-gray-700 pt-8 text-center md:text-left">
-                <ul class="flex flex-col md:flex-row justify-between text-gray-400 text-sm">
-                    <li class="mb-2 md:mb-0"><a href="terms.html" class="hover:text-pink-500">Términos y Condiciones</a></li>
-                    <li class="mb-2 md:mb-0"><a href="privacy.html" class="hover:text-pink-500">Política de Privacidad</a></li>
-                    <li class="mb-2 md:mb-0"><a href="cookies.html" class="hover:text-pink-500">Política de Cookies</a></li>
-                    <li class="mb-2 md:mb-0"><a href="careers.html" class="hover:text-pink-500">Carreras</a></li>
-                    <li class="mb-2 md:mb-0"><a href="partners.html" class="hover:text-pink-500">Afiliados</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+<div id="footer-placeholder"></div>
 
 </html>
 
@@ -218,6 +138,36 @@
         } catch (error) {
             console.error('Error al cargar los vehículos:', error);
             container.innerHTML = `<p class="text-red-500">Error al cargar los vehículos. Intenta nuevamente más tarde.</p>`;
+        }
+    });
+</script>
+
+<script>
+    // Cargar el contenido del archivo navbar.html dinámicamente
+    document.addEventListener('DOMContentLoaded', async () => {
+        try {
+            const response = await fetch('../components/navbar.html');
+            if (!response.ok) throw new Error('No se pudo cargar el navbar');
+            const navbarHTML = await response.text();
+            document.getElementById('navbar-placeholder').innerHTML = navbarHTML;
+        } catch (error) {
+            console.error('Error al cargar el navbar:', error);
+        }
+    });
+</script>
+
+
+<script>
+    // Cargar el contenido del archivo footer.html dinámicamente
+    document.addEventListener('DOMContentLoaded', async () => {
+        try {
+            const response = await fetch('../components/footer.html');  // Ruta del footer
+            if (!response.ok) throw new Error('No se pudo cargar el footer.');
+
+            const footerContent = await response.text();  // Obtener el contenido del footer
+            document.getElementById('footer-placeholder').innerHTML = footerContent;  // Insertar el footer
+        } catch (error) {
+            console.error('Error al cargar el footer:', error);
         }
     });
 </script>
